<resources>
    <string name="app_name">PokeDex</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create">Create</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="stat_format">%1$s - %2$s</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="favorite_pokemon">Favorite Pokemon</string>
    <string name="favorite_list_pokemons">Favorite List Pokemons</string>
    <string name="download_image">Download Image</string>
</resources>